# Quantum-SymCell

./: .gitmodules  CMakeLists.txt  README.md  SymCell.cpp  SymCell.h  SymCell_Config.h  post-build.sh  pre-build.sh
SymCell/: Add.cpp  Add.h  Basic.cpp  Basic.h  Compare.cpp  Compare.h  Div.cpp  Div.h  Expand.cpp  Expand.h  Mul.cpp  Mul.h  Pow.cpp  Pow.h  Sub.cpp  Sub.h  Subs.cpp  Subs.h
benchmark/: add1.hpp  benchmark_symengine.hpp  eval_double1.hpp  expand1.hpp
tests/: test_symcell_basic.hpp  test_symengine_arit.hpp  test_symengine_basic.hpp  test_symengine_diophantine.hpp  test_symengine_eval_double.hpp  test_symengine_eval_mpfr.hpp  test_symengine_expression.hpp  test_symengine_integer.hpp  test_symengine_matrix.hpp  test_symengine_ntheory.hpp  test_symengine_poly.hpp  test_symengine_polynomial.hpp  test_symengine_printing.hpp  test_symengine_rcp.hpp  test_symengine_subs.hpp
